MDEV-24026: InnoDB: Failing assertion: os_total_large_mem_allocated >= size upon incremental backup

Preliminary fix without test case.